🚀 統合環境管理システム実装: 開発/ステージング/本番環境の自動切り替え・昇格システム、社内LAN対応、36アイテム・45BOM構成データ移行済み

--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,6 @@ Thumbs.db
 # Oracle specific
 tnsnames.ora
 sqlnet.ora
-wallet/ 
+wallet/ # Deployment artifacts
+deployment_manifest_*.json
+backup_*.db
