（安定版）ダッシュボード＆ブレッドクラムナビゲーション実装完了 - DBファイル含む - 新機能: ダッシュボードページ、ブレッドクラムナビゲーション - 修正: url_forエラー全面修正 - データ: 安定版DBファイル群含む（デモ環境保持）

--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,10 @@ wheels/
 *.egg
 MANIFEST
 
-# Database files
-*.db
-*.sqlite
-*.sqlite3
+# Database files - 安定版デモ環境のため一時的にコメントアウト
+# *.db
+# *.sqlite
+# *.sqlite3
 
 # Virtual environment
 venv/
